--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Krithi Technologies</title>
+  <link rel="stylesheet" href="./dist/css/style.css">
+</head>
+<body>
+  <h1>List Counter</h1>
+  <div id="list-container">
+    <p>Total Items: <span id="counter">0</span></p>
+    <ul id="list">
+      <!-- Items will appear here -->
+    </ul>
+  </div>
+  <button id="add-item">Add Item</button>
+
+  <script src="./dist/js/script.js">
+  </script>
+</body>
+</html>
